# carbon-accounting-specs

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_MCP.md  fly.toml  index.html  pyproject.toml  smithery.yaml
.github/ISSUE_TEMPLATE/: emission-factor.md
.github/workflows/: fly-deploy.yml  release.yml  validate.yml
docs/: README.md  README_CN.md  agent-integration-guide.md  methodology.md  mvp-plan.md  pdf-spec-consistency-report.md  schema-spec.md  spec-driven-audit-design.md
examples/: real_scenarios.py  sample-usage.yaml  scope2_real_cases.json  test_spec.py  test_spec_driven_audit.py  validate.py
mcp_server/: __init__.py  __main__.py  bridge.py  engine.py  loader.py  server.py  tools_gf.py  tools_ghg.py  tools_search.py  tools_spec.py
schemas/: boundary-overlap-input.json  boundary-overlap-output.json  chp-emission-split-input.json  chp-emission-split-output.json  equity-share-input.json  equity-share-output.json  financial-control-input.json  financial-control-output.json  operational-control-input.json  operational-control-output.json
scripts/: linkedin_post.py  parse_green_bond_catalog.py
specs/: _meta.yaml
specs/constraints/: certificate-management.yaml  prohibitions.yaml  scope2-quality-criteria.yaml
specs/green-finance/: AUDIT-REPORT.md  bond-catalog.yaml  bond-eligibility.yaml  credit-classification.yaml  cross-domain-bridge.yaml  issb-s2-disclosure.yaml
specs/methods/: dual-reporting.yaml  location-based.yaml  market-based.yaml
specs/principles/: data-quality-hierarchy.yaml  (+3 more)
tests/: test_mcp_tools.py
(+35 files in other folders)
